# python-deep-dive

./: CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml
books/01_python_tricks/: content.md
books/01_python_tricks/02_patterns_for_cleaner_python/: 01_assertions.py  02_comma_placement.py  03_context_managers.py  04_underscores_dunders.py  05_string_formatting.py
books/01_python_tricks/03_effective_functions/: 01_first_class.py  02_lambdas.py  03_decorators.py  04_args_kwargs.py  05_arguments_unpacking.py
books/01_python_tricks/04_classes_and_oop/: 02_repr_and_str.py  03_custom_exeptionins.py  04_cloning_objects.py  05_abstract_base_classes.py  06_named_tuples.py  07_class_vs_instance_vars.py  08_instance_class_static_methods.py
books/01_python_tricks/05_data_structures/: 01_dicts.py  02_array_data_types.py  06_queues.py  07_priority_queues.py  5_stacks_lifo.py
books/01_python_tricks/06_loops_and_iteration/: 01_loops.py  02_comprehensions.py  03_slicing_sushi_operator.py  04_beautiful_iterators.py  06_generators.py  07_generator_expressions.py  08_iterator_chains.py
books/01_python_tricks/07_dict_trics/: 03_switch_case.py  04_crazy_expression.py  05_dict_merge.py  06_dict_printing.py
books/01_python_tricks/08_productivity_techniques/: 01_modules_and_objects.py  03_bytecode.py
books/02_fluent_python/: content.md
books/02_fluent_python/01_the_python_data_model/: 01_card_deck.py  02_how_special_methods_are_used.py
books/02_fluent_python/02_an_array_of_sequences/: 01_list_comprehensions_generator_expressions.py  02_gen_expressions.py  03_tuples.py  (+8 more)
(+77 files in other folders)
